tests/positive/pr118c2_package_print.safe
package pr118c2_package_print

   value : integer (0 to 42) = 41

   print (value + 1)
