tests/negative/neg_pr1112a_shared_non_record.safe
package neg_pr1112a_shared_non_record

   shared value : integer = 1
